# cmake_minimum_required(VERSION 3.1.2)

# add_subdirectory(googletest/googletest)
# include_directories(googletest/googletest/include)

# add_subdirectory(common)

# enable_testing()

# add_executable(testCpp main.cpp)
# target_link_libraries(testCpp gtest gtest_main )

#add_subdirectory(dataStructures)